gcp-app/k8s/istio/request-authn-jwt.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: default
spec:
  selector:
    matchLabels:
      app: service-a
  jwtRules:
  - issuer: "http://localhost:18080/realms/istio-demo"
    jwksUri: "http://keycloak.keycloak.svc.cluster.local:8080/auth/realms/istio-demo/protocol/openid-connect/certs"
