gcp-app/k8s/istio/egress-httpbin.yaml
# --- egress-httpbin.yaml ---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: httpbin-external
  namespace: default
spec:
  hosts:
    - httpbin.org
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-external
  namespace: default
spec:
  host: httpbin.org
  trafficPolicy:
    tls:
      mode: SIMPLE
