gcp-app/k8s/istio/egress-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: onprem-external
  namespace: default
spec:
  hosts:
  - scores-curves-colored-von.trycloudflare.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
