gcp-app/k8s/istio/allow-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: service-b-allow-all
  namespace: default
spec:
  selector:
    matchLabels:
      app: service-b
  action: ALLOW
  rules:
    - {}   # 任何人、任何路徑、任何方法都給過
