gcp-app/k8s/istio/authz-egress.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-egress
  namespace: default
spec:
  selector:
    matchLabels:
      app: service-a
  action: ALLOW
  rules:
  - {}
