gcp-app/k8s/istio/authz-service-a-public.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: service-a-allow-public
  namespace: default
spec:
  selector:
    matchLabels:
      app: service-a
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
        - "/"
        - "/public"
        - "/static/*"
