gcp-app/k8s/istio/authz-user-claims.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: service-b-user-authz
  namespace: default
spec:
  selector:
    matchLabels:
      app: service-b
  rules:
  - to:
    - operation:
        paths: ["/private"]
    when:
    - key: request.auth.claims[role]
      values: ["admin", "user"]
